# FTL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  helixfall.py  pyproject.toml
.claude/: settings.json
assets/: README.md
content/augments/: bonebreaker_drills.yaml  helix_scanners.yaml  lattice_threadlink.yaml  mote_reactor_link.yaml  riveted_plating.yaml
content/drones/: anti_personnel_drone_mk1.yaml  boarding_drone_mk1.yaml  combat_drone_mk1.yaml  defense_drone_mk1.yaml  hull_repair_drone_mk1.yaml
content/factions/: choral_order.yaml  consilium_of_stars.yaml  free_traders.yaml  mercatile_verge.yaml
content/scenarios/: first_encounter.yaml  pilgrim_path.yaml
content/sectors/: borderlands.yaml  concordat_warfront.yaml  inner_spiral_edge.yaml  the_borderlands.yaml
content/ships/: concordat_seraph.yaml  consilium_lancer.yaml  pilgrim.yaml  throne_of_ash.yaml  vein_skiff.yaml  verge_corvette.yaml  wayfarer.yaml
content/species/: choir.yaml  drevant.yaml  ferran.yaml  halene.yaml  loam.yaml  mhirsa.yaml  sapien.yaml  synthetic.yaml  yssari.yaml
content/systems/: weapons.yaml
content/weapons/: echo_coil_mk1.yaml  glassburst_mk1.yaml  helix_cutter_mk1.yaml  pulse_lance_mk1.yaml  splinter_missile_mk1.yaml  splinter_wedge_mk1.yaml
src/ftl/: __init__.py  __main__.py  app.py  config.py
story/events/: README.md
story/worldbuilding/: SETTING.md  conflicts.md  glossary.md  species.md  storylines.md
tests/: conftest.py
tests/content/: test_content_validation.py
tests/integration/: test_active_systems_flow.py  test_boarding_flow.py  test_combat_flow.py  test_drone_loadout.py  test_full_run.py
tests/unit/: test_atmosphere.py  test_augments.py  test_battery.py  test_cloaking.py  test_clonebay.py  test_combat.py  test_combat_pipeline.py  test_crew.py  test_crew_combat.py  test_crew_movement.py  test_doors_hp.py  test_enemy_ai.py  (+35 more)
(+174 files in other folders)
